nav fixed on mobiles

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -147,3 +147,9 @@ article a {
     }
   }
 }
+
+@media (max-width: $screen-xs-max) {
+  .content-column {
+    padding-top: 110px;
+  }
+}
